--- a/AmitX/Kernel/isodir/boot/grub/grub.cfg
+++ b/AmitX/Kernel/isodir/boot/grub/grub.cfg
@@ -1,7 +1,7 @@
 set timeout=0
 set default=0
 
-menuentry "AmitX Kernel" {
+menuentry \"AmitX Kernel\" {
     multiboot /boot/kernel.bin
     boot
 }
