--- a/AmitX/Kernel/Makefile
+++ b/AmitX/Kernel/Makefile
@@ -3,11 +3,11 @@ CC = i686-elf-gcc
 LD = i686-elf-ld
 
 # Flags
-CFLAGS  = -m32 -ffreestanding -O2 -Wall -Wextra -Iinclude -IAmitC -Icyclone -Isrc -I..
+CFLAGS  = -m32 -ffreestanding -O2 -Wall -Wextra -Iinclude -IAmitC -Icyclone -I..
 LDFLAGS = -T boot/linker.ld -nostdlib
 
 # Sources and objects
-SRC_C = src/kernel.c src/screen.c src/io.c src/string.c src/interrupts.c src/time.c src/timer.c src/keyboard.c src/idt.c src/logo.c src/fs.c src/settings.c src/Paging/paging.c src/heap.c src/tests.c src/task.c src/app.c src/syscall.c
+SRC_C = src/kernel.c src/screen.c src/io.c src/string.c src/interrupts.c src/time.c src/timer.c src/keyboard.c src/idt.c src/logo.c src/fs.c src/settings.c src/heap.c src/tests.c src/task.c src/app.c src/syscall.c
 SRC_CYCLONE = cyclone/cyclone.c cyclone/commands.c cyclone/utils.c
 SRC_S = boot/boot.S src/isr_stub.S src/gdt.S
 OBJS  = $(SRC_C:.c=.o) $(SRC_S:.S=.o) $(SRC_AMITC:.c=.o) $(SRC_CYCLONE:.c=.o)
